# specs

./: .clang-format  .config.gitlab-ci.mk  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  config.mk  install.sh  todo.txt
circuits/: add_drop.cir  add_drop_pyspecs.cir  add_drop_sub.cir  common_definitions.def  double_ring.cir  paul_3ring_puf.cir  paul_simple_ring.cir  subckt_test.cir  subckt_tests.cir  test_include.cir  triple_ring.cir
cmake/: coverage.cmake  googletest.cmake
doc/: Doxyfile  custom.css  mainpage.md
pyspecs/: pyspecs_example.ipynb  specs.py  specsparse.py
src/: main.cpp  optical_output_port.cpp  optical_output_port.h  optical_signal.cpp  optical_signal.h  specs.cpp  specs.h
src/devices/: alldevices.h  bitstream_source.cpp  bitstream_source.h  clements.cpp  clements.h  crossing.cpp  crossing.h  crow.cpp  crow.h  cw_source.cpp  cw_source.h  detector.cpp  detector.h  directional_coupler.cpp  directional_coupler.h  electrical_value_list_source.cpp  electrical_value_list_source.h  generic_2x2_coupler.h  generic_transmission_device.cpp  generic_transmission_device.h  generic_waveguide.h  merger.cpp  merger.h  mesh_col.cpp  mesh_col.h  mzi.cpp  mzi.h  mzi_active.cpp  mzi_active.h  octane_cell.cpp  octane_cell.h  octane_matrix.cpp  octane_matrix.h  octane_segment.cpp  octane_segment.h  pcm_device.cpp  pcm_device.h  phaseshifter.cpp  phaseshifter.h  power_meter.cpp  (+15 more)
src/parser/: CMakeLists.txt  parse_analysis.cpp  parse_analysis.h  parse_directive.cpp  parse_directive.h  parse_element.cpp  parse_element.h  parse_tree.cpp  parse_tree.h  parser.l  parser.y  parser_state.h
src/tb/: CMakeLists.txt  alltestbenches.cpp  alltestbenches.h  crow_tb.cpp  crow_tb.h  detector_tb.cpp  detector_tb.h  directional_coupler_tb.cpp  directional_coupler_tb.h  freqsweep_tb.cpp  freqsweep_tb.h  lambda_tb.cpp  lambda_tb.h  merger_tb.cpp  merger_tb.h  mesh_tb.cpp  mesh_tb.h  mzi_tb.cpp  mzi_tb.h  pcm_device_tb.cpp  pcm_device_tb.h  phase_shifter_tb.cpp  phase_shifter_tb.h  ring_tb.cpp  ring_tb.h  splitter_tb.cpp  splitter_tb.h  wg_tb.cpp  wg_tb.h
src/test/: CMakeLists.txt  main.cpp
src/utils/: general_utils.cpp  general_utils.h  pqueue.h  strutils.h  sysc_utils.cpp  sysc_utils.h
utils/: analyze_detector_trace.py  draw_graph_from_json.py  openwave.sh  specs.kicad_sym
